--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
@@ -29,7 +30,8 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
     "slugify": "^1.3.6",
-    "validator": "^12.0.0"
+    "validator": "^12.0.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
